--- a/2010/thesis/totem.tex
+++ b/2010/thesis/totem.tex
@@ -6,6 +6,8 @@
 
 \section[rp system]{The Roman Pot system}
 
+\> left = 45, right = 56
+
 \fig[15cm]{fig/external/RP_stations_original.pdf}{rp stations}{RP stations}
 \fig[10cm]{fig/external/rp_unit.jpg}{rp unit}{RP unit}
 \fig[10cm]{fig/external/rp.jpg}{rp rp}{A Roman Pot}
