felm chapter advanced
git-svn-id: svn+ssh://svn.cern.ch/reps/totem/trunk/user/jkaspar/publications@4237 4525493e-7705-40b1-a816-d608a930855b

--- a/2010/thesis/introduction.tex
+++ b/2010/thesis/introduction.tex
@@ -1,44 +1,19 @@
-\chapter{Introduction}
+\SpecialChapter{Introduction}
 
 \> General introduction
 \> {\bf motivation} for what I study.
 
-\section{CERN, LHC}
-
-\> bla bla
+\> something about CERN, LHC as introduction for TOTEM
 
 
-\section{Conventions}
 
 \> typographical conventions
 
-\tab[\strut\qquad #\hfil&\qquad #\hfil&\qquad #\hfil\qquad\cr]{typo conventions}{Typographical conventions.}{\ln
-struture			& example				& font/symbol\cr\ln
+\centerline{\vbox{\halign{\strut\qquad #\hfil&\qquad #\hfil&\qquad #\hfil\qquad\cr\ln
+structure			& example				& font/symbol\cr\ln
 scalar				& $s$ 					& italics\cr
 vector				& $\vec v$				& bold\cr
 element of vector	& $v_i$					& italics\cr
 dot product			& $\vec v\cdot \vec w$	& middle dot\cr
 matrix				& $\mat M$				& slanted\cr\ln
-}
-
-
-\section{Theoretical concepts}
-
-\> def of cross-section, t, xi
-\>> precise formulae
-
-\> def of luminosity
-
-One of the definitions of cross-section $\si$ relates it to the corresponding number of events $N$ per time
-\eqref{{\d N\over \d t} = \si\,j\,n_T\.}{in cross-section}
-$j$ denotes the flux of bombarding particles and $n_T$ is the number of target particles. This formula can be written in a more general form
-\eqref{N = \si\,{\cal L}_{int},\qquad {\cal L}_{int} = \int\d t\,\d x\,\d y\,\d z\, j(x, y, z; t)\, \rh_T(x, y, z; t), }{in luminosity}
-where ${\cal L}_{int}$ is the integrated luminosity in a given time interval and $\rh_T$ is the density of target particles.
-
-
-
-\> optical theorem
-\>> neglecting spins - several amplitudes, how to treat them in the optical theorem - Formanek
-
-\> symmetries
-\>> azimuthal symmetry? Question of Formanek
+}}}
