--- a/2010/thesis/thesis.tex
+++ b/2010/thesis/thesis.tex
@@ -25,7 +25,7 @@
 	\def\FootText{(VERSION 4)}
 \fi
 
-\def\pmt#1{\hbox{\tt[#1]}}
+\def\pmt#1{\hbox{\tt #1}}
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
@@ -60,8 +60,8 @@
 
 %\input introduction.tex
 %\input elastic.tex
-%\input totem.tex
-%\input simu_reco.tex
+\input totem.tex
+\input simu_reco.tex
 %\input alignment.tex
 \input first_el_measurement.tex
 
