--- a/2010/thesis/introduction.tex
+++ b/2010/thesis/introduction.tex
@@ -16,4 +16,5 @@ vector				& $\vec v$				& bold\cr
 element of vector	& $v_i$					& italics\cr
 dot product			& $\vec v\cdot \vec w$	& middle dot\cr
 matrix				& $\mat M$				& slanted\cr\ln
+software parameter  & \pmt{parameter}		& typewriter\cr\ln
 }}}
